--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,8 @@ services:
       dockerfile: ./compose/django/Dockerfile
     env_file:
       - ./.envs/.local
+    environment:
+      DEBUG: 'True'
     ports:
       - '8000:8000'
     volumes:
